# guitar-scales

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
assets/: manifest.json  sw.js
src/: fretboard.rs  guitar.rs  instruments.rs  main.rs  scales.rs
