[package]
name = "rust-guitar-scales"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
wasm-bindgen = "0.2.83"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
tracing-wasm = "0.2"
egui_extras = "0.21.0"
strum = "0.24.1"
strum_macros = "0.24.3"
