[package]
name = "rust-guitar-scales"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
tracing-wasm = "0.2"
egui_extras = "0.27.2"
strum = "0.24.1"
strum_macros = "0.24.3"
