[package]
name = "fretboard_scales"
authors = ["Nick Pattison <pattison.nick@gmail.com>"]
version = "0.4.0"
edition = "2021"

[dependencies]

log = "0.4"

# strings and iterators for enums
strum = "0.26"
strum_macros = "0.26"

# app persistence:
serde = { version = "1", features = ["derive"] }

# egui
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
        #"accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
        "default_fonts", # Embed the default egui fonts.
        "glow",          # Use the glow rendering backend. Alternative: "wgpu".
        "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = "0.28.1"
egui-notify = "0.15.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"

# build for web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
